--- a/src/frontend/components/AppShell/AppShell.module.css
+++ b/src/frontend/components/AppShell/AppShell.module.css
@@ -1,11 +1,16 @@
 .navbar {
-  background-color: light-dark(var(--mantine-color-white),
-      var(--mantine-color-dark-6));
+  background-color: light-dark(
+    var(--mantine-color-white),
+    var(--mantine-color-dark-6)
+  );
   width: 300px;
   display: flex;
   flex-direction: column;
-  border-right: 1px solid light-dark(var(--mantine-color-gray-3),
-      var(--mantine-color-dark-4));
+  border-right: 1px solid
+    light-dark(
+      var(--mantine-color-gray-3),
+      var(--mantine-color-dark-4)
+    );
 }
 
 .header {
@@ -13,10 +18,15 @@
   padding-top: 0;
   margin-left: calc(var(--mantine-spacing-md) * -1);
   margin-right: calc(var(--mantine-spacing-md) * -1);
-  color: light-dark(var(--mantine-color-black),
-      var(--mantine-color-white));
-  border-bottom: 1px solid light-dark(var(--mantine-color-gray-3),
-      var(--mantine-color-dark-4));
+  color: light-dark(
+    var(--mantine-color-black),
+    var(--mantine-color-white)
+  );
+  border-bottom: 1px solid
+    light-dark(
+      var(--mantine-color-gray-3),
+      var(--mantine-color-dark-4)
+    );
 }
 
 .links {
@@ -28,23 +38,31 @@
 .footer {
   margin-left: calc(var(--mantine-spacing-md) * -1);
   margin-right: calc(var(--mantine-spacing-md) * -1);
-  border-top: 1px solid light-dark(var(--mantine-color-gray-3),
-      var(--mantine-color-dark-4));
+  border-top: 1px solid
+    light-dark(
+      var(--mantine-color-gray-3),
+      var(--mantine-color-dark-4)
+    );
 }
 
 .control {
   font-weight: 500;
   display: block;
   width: 100%;
-  padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
+  padding: var(--mantine-spacing-xs)
+    var(--mantine-spacing-md);
   color: var(--mantine-color-text);
   font-size: var(--mantine-font-size-sm);
 
   @mixin hover {
-    background-color: light-dark(var(--mantine-color-gray-0),
-        var(--mantine-color-dark-7));
-    color: light-dark(var(--mantine-color-black),
-        var(--mantine-color-dark-0));
+    background-color: light-dark(
+      var(--mantine-color-gray-0),
+      var(--mantine-color-dark-7)
+    );
+    color: light-dark(
+      var(--mantine-color-black),
+      var(--mantine-color-dark-0)
+    );
   }
 }
 
@@ -52,20 +70,30 @@
   font-weight: 500;
   display: block;
   text-decoration: none;
-  padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
+  padding: var(--mantine-spacing-xs)
+    var(--mantine-spacing-md);
   padding-left: var(--mantine-spacing-md);
   margin-left: var(--mantine-spacing-xl);
   font-size: var(--mantine-font-size-sm);
-  color: light-dark(var(--mantine-color-gray-7),
-      var(--mantine-color-dark-0));
-  border-left: 1px solid light-dark(var(--mantine-color-gray-3),
-      var(--mantine-color-dark-4));
+  color: light-dark(
+    var(--mantine-color-gray-7),
+    var(--mantine-color-dark-0)
+  );
+  border-left: 1px solid
+    light-dark(
+      var(--mantine-color-gray-3),
+      var(--mantine-color-dark-4)
+    );
 
   @mixin hover {
-    background-color: light-dark(var(--mantine-color-gray-0),
-        var(--mantine-color-dark-7));
-    color: light-dark(var(--mantine-color-black),
-        var(--mantine-color-dark-0));
+    background-color: light-dark(
+      var(--mantine-color-gray-0),
+      var(--mantine-color-dark-7)
+    );
+    color: light-dark(
+      var(--mantine-color-black),
+      var(--mantine-color-dark-0)
+    );
   }
 }
 
@@ -73,27 +101,37 @@
   transition: transform 200ms ease;
 }
 
-
-
 .button {
   text-decoration: none;
   font-size: var(--mantine-font-size-sm);
-  color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-1));
-  padding: var(--mantine-spacing-xs) var(--mantine-spacing-sm);
+  color: light-dark(
+    var(--mantine-color-gray-7),
+    var(--mantine-color-dark-1)
+  );
+  padding: var(--mantine-spacing-xs)
+    var(--mantine-spacing-sm);
   border-radius: var(--mantine-radius-sm);
   font-weight: 500;
 
   &:hover {
-    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
-    color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+    background-color: light-dark(
+      var(--mantine-color-gray-0),
+      var(--mantine-color-dark-6)
+    );
+    color: light-dark(
+      var(--mantine-color-black),
+      var(--mantine-color-white)
+    );
 
     & .linkIcon {
-      color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+      color: light-dark(
+        var(--mantine-color-black),
+        var(--mantine-color-white)
+      );
     }
   }
 
   &[data-active] {
-
     &,
     &:hover {
       background-color: var(--mantine-color-blue-light);
@@ -107,7 +145,10 @@
 }
 
 .buttonIcon {
-  color: light-dark(var(--mantine-color-gray-6), var(--mantine-color-dark-2));
+  color: light-dark(
+    var(--mantine-color-gray-6),
+    var(--mantine-color-dark-2)
+  );
   width: 25px;
   height: 25px;
 }
